fix IE()